# kth_px4_simulation

./: README.md  README.md~
gazebo-assets/: README.md  README.md~
gazebo-assets/Models/d_camera/: model.sdf  model.sdf~
gazebo-assets/Models/iris_cam/: iris_cam.sdf  iris_cam.sdf~
gazebo-assets/Worlds/: cage.world
gazebo-assets/models/d_camera/: model.config
gazebo-assets/models/iris_cam/: model.config
instructions/: Add_sensor_to_robot.txt  Building_simple_world.mkv
ros-nodes/: README.md
ros-nodes/setpoint_control/: CMakeLists.txt  CMakeLists.txt~  package.xml
ros-nodes/setpoint_control/cfg/: a_teleop.cfg~  auto_teleop.cfg~  uav_altitude.cfg~
ros-nodes/setpoint_control/src/: setpoint.cpp
ros-nodes/uav_model/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ros-nodes/uav_model/launch/: OrbSLam2.launch~  SitL_autocontrol.launch~  SitL_control.launch~  SitL_default.launch  SitL_map_server.launch~  SitL_setup.launch~  cage_setup.launch~  drone_launch.launch~  drone_launch_SitL_control.launch~  drone_launch_cage_control.launch~  drone_launch_cage_setup.launch~  state_publisher.launch~  tf_tree.launch~  uav_tf.launch
ros-nodes/uav_model/src/: uav_tf.cpp
ros-nodes/uav_model/urdf/: Flyguy.xml~  flyguy.xml~  kth_default.xml
